common/force-app/main/default/objects/Account/fields/Account_Created_via_Portal__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_via_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Created via Portal</label>
    <type>Checkbox</type>
</CustomField>