common/force-app/main/default/objects/Account/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://venturecrowd.lightning.force.com/&quot; &amp; Id, &apos;Click Here To View&apos;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Link</label>
    <type>Text</type>
</CustomField>