common/force-app/main/default/objects/Account/fields/Account_Ownership_Comment__c.field-meta.xml
<CustomField>
    <fullName>Account_Ownership_Comment__c</fullName>
    <inlineHelpText>By the submitter</inlineHelpText>
    <label>Account Ownership Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>