common/force-app/main/default/objects/Account/fields/Account_Type_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Dynamic__c</fullName>
    <formula>IF(Total_Closed_Won_Opps__c &gt; 0, &apos;Existing Business&apos;, 

 IF(
     AND(Total_Closed_Won_Opps__c = 0, TODAY() - DATEVALUE(CreatedDate) &gt; 56), &apos;New Business&apos;, 

   IF(
       AND(Total_Closed_Won_Opps__c = 0, TODAY() - DATEVALUE(CreatedDate) &lt; 56), &apos;New New Business&apos;,null)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type - Dynamic</label>
    <type>Text</type>
</CustomField>