common/force-app/main/default/objects/Account/fields/Accountant__c.field-meta.xml
<CustomField>
    <fullName>Accountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Accountant)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>