common/force-app/main/default/objects/Account/fields/Accountant_Address__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Address__c</fullName>
    <label>Accountant Address</label>
    <type>TextArea</type>
</CustomField>