common/force-app/main/default/objects/Account/fields/Accountant_chechbox__c.field-meta.xml
<CustomField>
    <fullName>Accountant_chechbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accountant?</label>
    <type>Checkbox</type>
</CustomField>