common/force-app/main/default/objects/Account/fields/Accountant_Company__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Company__c</fullName>
    <label>Accountant Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>