common/force-app/main/default/objects/Account/fields/Accountant_Email__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Email__c</fullName>
    <label>Accountant Email</label>
    <type>Email</type>
</CustomField>