common/force-app/main/default/objects/Account/fields/Accountant_Name__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Name__c</fullName>
    <label>Accountant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>