common/force-app/main/default/objects/Account/fields/Accountant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Phone__c</fullName>
    <label>Accountant Phone</label>
    <type>Phone</type>
</CustomField>