common/force-app/main/default/objects/Account/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <inlineHelpText>Australian Company Number (ACN)  or Australian Business Number (ABN)</inlineHelpText>
    <label>ACN/ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>