common/force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Before checking this box you must run this entity through SKYC and upload the &quot;Main Report&quot; to the related tab within this record. 
By checking this box you&apos;re confirming that you have completed the above and that the entity is verified and is able to complete an investment.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>