common/force-app/main/default/objects/Account/fields/Approval_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>