common/force-app/main/default/objects/Account/fields/Approval_Requested_For__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Requested For</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>