common/force-app/main/default/objects/Account/fields/Assign_BPAY__c.field-meta.xml
<CustomField>
    <fullName>Assign_BPAY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign BPAY</label>
    <type>Checkbox</type>
</CustomField>