common/force-app/main/default/objects/Account/fields/Associated_Opps__c.field-meta.xml
<CustomField>
    <fullName>Associated_Opps__c</fullName>
    <description>This field is used to hide report chart on Account when no data to present</description>
    <label>Associated Opps</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>