common/force-app/main/default/objects/Account/fields/Auto_Number_for_Registration_Page__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number_for_Registration_Page__c</fullName>
    <label>Auto Number for Registration Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>