common/force-app/main/default/objects/Account/fields/Background_Information__c.field-meta.xml
<CustomField>
    <fullName>Background_Information__c</fullName>
    <description>Add the detailed background about this account and the relationship with VentureCrowd</description>
    <inlineHelpText>Add the detailed background about this account and the relationship with VentureCrowd</inlineHelpText>
    <label>Background Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>