common/force-app/main/default/objects/Account/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>