common/force-app/main/default/objects/Account/fields/BIC_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>BIC_SWIFT__c</fullName>
    <description>BIC / SWIFT code for International transfers</description>
    <label>BIC/SWIFT</label>
    <length>15</length>
    <type>Text</type>
</CustomField>