common/force-app/main/default/objects/Account/fields/BPAY__c.field-meta.xml
<CustomField>
    <fullName>BPAY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPAY</label>
    <referenceTo>BPAY__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>