common/force-app/main/default/objects/Account/fields/BPAY_CRN__c.field-meta.xml
<CustomField>
    <fullName>BPAY_CRN__c</fullName>
    <formula>BPAY__r.CRN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPAY CRN</label>
    <type>Text</type>
</CustomField>