common/force-app/main/default/objects/Account/fields/CIF_Business_Account__c.field-meta.xml
<CustomField>
    <fullName>CIF_Business_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Temporary field used to email business account from a person account</inlineHelpText>
    <label>CIF Business Account</label>
    <type>Checkbox</type>
</CustomField>