common/force-app/main/default/objects/Account/fields/Comments_Survey__c.field-meta.xml
<CustomField>
    <fullName>Comments_Survey__c</fullName>
    <label>Survey Comments</label>
    <type>TextArea</type>
</CustomField>