common/force-app/main/default/objects/Account/fields/Company_ABN_numbers__c.field-meta.xml
<CustomField>
    <fullName>Company_ABN_numbers__c</fullName>
    <label>Company ABN numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>