common/force-app/main/default/objects/Account/fields/CR_Notes__c.field-meta.xml
<CustomField>
    <fullName>CR_Notes__c</fullName>
    <description>This field is used by Jason and team to provide context or executive level actions</description>
    <inlineHelpText>This field is used by Jason and team to provide context or executive level actions</inlineHelpText>
    <label>CR Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>