common/force-app/main/default/objects/Account/fields/Create_Company_Account__c.field-meta.xml
<CustomField>
    <fullName>Create_Company_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Company Account</label>
    <type>Checkbox</type>
</CustomField>