common/force-app/main/default/objects/Account/fields/Create_EOI__c.field-meta.xml
<CustomField>
    <fullName>Create_EOI__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to create EOI</description>
    <label>Create EOI</label>
    <type>Checkbox</type>
</CustomField>