common/force-app/main/default/objects/Account/fields/Created_in_Portal__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Portal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If created in the portal it will be checked by default</description>
    <label>Created in Portal</label>
    <type>Checkbox</type>
</CustomField>