common/force-app/main/default/objects/Account/fields/Date_of_first_Investment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_Investment__c</fullName>
    <label>Date of first Investment</label>
    <type>Date</type>
</CustomField>