common/force-app/main/default/objects/Account/fields/Days_Since_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Account_Created__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Account Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>