common/force-app/main/default/objects/Account/fields/Engagement_Stage__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Stage__c</fullName>
    <label>Engagement Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Contact/Inbound</fullName>
            </value>
            <value>
                <fullName>Reached Out</fullName>
            </value>
            <value>
                <fullName>Meeting Pending</fullName>
            </value>
            <value>
                <fullName>Founder Not Ready</fullName>
            </value>
            <value>
                <fullName>Raise Timing Unknown</fullName>
            </value>
            <value>
                <fullName>Company To Early</fullName>
            </value>
            <value>
                <fullName>Growth Services - To Early</fullName>
            </value>
            <value>
                <fullName>Growth Services - VC Raise</fullName>
            </value>
            <value>
                <fullName>No Response From Founder</fullName>
            </value>
            <value>
                <fullName>Short List</fullName>
            </value>
            <value>
                <fullName>Portfolio Founder</fullName>
            </value>
            <value>
                <fullName>Rejected - Founder Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>