common/force-app/main/default/objects/Account/fields/Family_Office__c.field-meta.xml
<CustomField>
    <fullName>Family_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Office</label>
    <type>Checkbox</type>
</CustomField>