common/force-app/main/default/objects/Account/fields/Financial_Planner__c.field-meta.xml
<CustomField>
    <fullName>Financial_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Planner</label>
    <type>Checkbox</type>
</CustomField>