common/force-app/main/default/objects/Account/fields/GID_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>GID_Address_Street__c</fullName>
    <label>GID_Address Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>