common/force-app/main/default/objects/Account/fields/GID_Address_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>GID_Address_Street_Type__c</fullName>
    <label>GID_Address Street Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>