common/force-app/main/default/objects/Account/fields/GID_Address_Suburb__c.field-meta.xml
<CustomField>
    <fullName>GID_Address_Suburb__c</fullName>
    <label>GID_Address Suburb</label>
    <length>200</length>
    <type>Text</type>
</CustomField>