common/force-app/main/default/objects/Account/fields/GID_Changed_Address_Flat_Number__c.field-meta.xml
<CustomField>
    <fullName>GID_Changed_Address_Flat_Number__c</fullName>
    <label>GID_Changed Address Flat Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>