common/force-app/main/default/objects/Account/fields/GID_Changed_Address_State__c.field-meta.xml
<CustomField>
    <fullName>GID_Changed_Address_State__c</fullName>
    <label>GID_Changed Address State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>