common/force-app/main/default/objects/Account/fields/GID_Changed_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>GID_Changed_Middle_Name__c</fullName>
    <label>GID_Changed Middle Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>