common/force-app/main/default/objects/Account/fields/GID_Chnaged_DOB__c.field-meta.xml
<CustomField>
    <fullName>GID_Chnaged_DOB__c</fullName>
    <label>GID_Chnaged DOB</label>
    <type>Date</type>
</CustomField>