common/force-app/main/default/objects/Account/fields/GreenID_DOB__c.field-meta.xml
<CustomField>
    <fullName>GreenID_DOB__c</fullName>
    <label>GreenID DOB</label>
    <type>Date</type>
</CustomField>