common/force-app/main/default/objects/Account/fields/GreenID_First_Name__c.field-meta.xml
<CustomField>
    <fullName>GreenID_First_Name__c</fullName>
    <label>GreenID First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>