common/force-app/main/default/objects/Account/fields/GreenID_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>GreenID_Last_Name__c</fullName>
    <label>GreenID Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>