common/force-app/main/default/objects/Account/fields/GreenId_Status__c.field-meta.xml
<CustomField>
    <fullName>GreenId_Status__c</fullName>
    <label>GreenId Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN_PROGRESS</fullName>
            </value>
            <value>
                <fullName>VERIFIED</fullName>
            </value>
            <value>
                <fullName>VERIFIED_ADMIN</fullName>
            </value>
            <value>
                <fullName>VERIFIED_WITH_CHANGES</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>null</fullName>
            </value>
            <value>
                <fullName>LOCKED_OUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>