common/force-app/main/default/objects/Account/fields/GreenID_TransID__c.field-meta.xml
<CustomField>
    <fullName>GreenID_TransID__c</fullName>
    <label>GreenID TransID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>