common/force-app/main/default/objects/Account/fields/GreenID_USerID__c.field-meta.xml
<CustomField>
    <fullName>GreenID_USerID__c</fullName>
    <label>GreenID USerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>