common/force-app/main/default/objects/Account/fields/GreenId_Verified_Name_Doesnt_Match__c.field-meta.xml
<CustomField>
    <fullName>GreenId_Verified_Name_Doesnt_Match__c</fullName>
    <formula>IF(( FirstName  =  GreenID_First_Name__c  &amp;&amp;  MiddleName  =  GreenID_Middle_Name__c  &amp;&amp;  LastName  =  GreenID_Last_Name__c ), false, true)</formula>
    <label>GreenId Verified Name Doesnt Match</label>
    <type>Checkbox</type>
</CustomField>