common/force-app/main/default/objects/Account/fields/Has_Made_1_Investment__c.field-meta.xml
<CustomField>
    <fullName>Has_Made_1_Investment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box will be ticked if account has 1 Won Opportunity.</description>
    <label>Has Made 1 Investment</label>
    <type>Checkbox</type>
</CustomField>