common/force-app/main/default/objects/Account/fields/Held_in_trust__c.field-meta.xml
<CustomField>
    <fullName>Held_in_trust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Held in trust</label>
    <type>Checkbox</type>
</CustomField>