common/force-app/main/default/objects/Account/fields/HIN__c.field-meta.xml
<CustomField>
    <fullName>HIN__c</fullName>
    <label>HIN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>