common/force-app/main/default/objects/Account/fields/How_did_you_first_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_first_hear_about_us__c</fullName>
    <description>A survey question from our welcome journey filled by the user.</description>
    <inlineHelpText>A survey question from our welcome journey filled by the user.</inlineHelpText>
    <label>How did you first hear about us</label>
    <type>TextArea</type>
</CustomField>