common/force-app/main/default/objects/Account/fields/How_likely_are_you_to_recommend_us_to_a__c.field-meta.xml
<CustomField>
    <fullName>How_likely_are_you_to_recommend_us_to_a__c</fullName>
    <label>How likely are you to recommend us to a</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>