common/force-app/main/default/objects/Account/fields/How_valuable_was_this_Welcome_Journey__c.field-meta.xml
<CustomField>
    <fullName>How_valuable_was_this_Welcome_Journey__c</fullName>
    <label>How valuable was this Welcome Journey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>