common/force-app/main/default/objects/Account/fields/ID3global_Authentication__c.field-meta.xml
<CustomField>
    <fullName>ID3global_Authentication__c</fullName>
    <label>ID3global Authentication</label>
    <length>200</length>
    <type>Text</type>
</CustomField>