common/force-app/main/default/objects/Account/fields/ID3global_Decision__c.field-meta.xml
<CustomField>
    <fullName>ID3global_Decision__c</fullName>
    <label>ID3global Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>