common/force-app/main/default/objects/Account/fields/Inactive_Email_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Email_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for Unengaged RFM segments who are no longer interested in receiving communications from us.</description>
    <inlineHelpText>This field is for Unengaged RFM segments who are no longer interested in receiving communications from us.</inlineHelpText>
    <label>Inactive Email Marketing</label>
    <type>Checkbox</type>
</CustomField>