common/force-app/main/default/objects/Account/fields/Industries_to_learn_more_about__c.field-meta.xml
<CustomField>
    <fullName>Industries_to_learn_more_about__c</fullName>
    <description>This field is filled from the get feedback form in the welcome journey. Here the user tells us what Industries to learn more about</description>
    <inlineHelpText>This field is filled from the get feedback form in the welcome journey. Here the user tells us what Industries to learn more about</inlineHelpText>
    <label>Industries to learn more about</label>
    <length>100</length>
    <type>Text</type>
</CustomField>