common/force-app/main/default/objects/Account/fields/Interested_in_pc__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_pc__c</fullName>
    <inlineHelpText>This field is updated dynamically based on investor interactions with emails and investments.</inlineHelpText>
    <label>Interested in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ventures</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>