common/force-app/main/default/objects/Account/fields/Interested_investing_in_Sector__c.field-meta.xml
<CustomField>
    <fullName>Interested_investing_in_Sector__c</fullName>
    <inlineHelpText>This field is filled by a survey on our welcome journey by the user.</inlineHelpText>
    <label>Interested investing in Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>