common/force-app/main/default/objects/Account/fields/Investor_Banner_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Investor_Banner_Interaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will track if the investor interact with the button of the new investor portal this field should be deleted after 12 weeks of PIPO. If this field still exist after May 2025 please delete it.</description>
    <label>Investor Banner Interaction</label>
    <type>Checkbox</type>
</CustomField>