common/force-app/main/default/objects/Account/fields/Investor_still_interested__c.field-meta.xml
<CustomField>
    <fullName>Investor_still_interested__c</fullName>
    <label>Investor still interested?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>1st Attempt</fullName>
            </value>
            <value>
                <fullName>2nd Attempt</fullName>
            </value>
            <value>
                <fullName>3rd Attempt</fullName>
            </value>
            <value>
                <fullName>4th Attempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>