common/force-app/main/default/objects/Account/fields/Investor_Updates_OptIn__c.field-meta.xml
<CustomField>
    <fullName>Investor_Updates_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to hold optin data for preference category Investor Updates on the preference centre page</description>
    <label>Investor_Updates_OptIn</label>
    <type>Checkbox</type>
</CustomField>