common/force-app/main/default/objects/Account/fields/InvestorPortal_Account_Card_Pic__c.field-meta.xml
<CustomField>
    <fullName>InvestorPortal_Account_Card_Pic__c</fullName>
    <formula>&quot;https://venturecrowd--c.documentforce.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682v00000HO39C&amp;operationContext=DELIVERY&amp;contentId=05T2v00001dT1ia&amp;page=0&amp;d=/a/2v000000MHbK/rdNf4x59i4SdAsLUfIEjqWatWZ6CRrai6XGOKcw.6ks&amp;oid=00D2v000000WjFp&amp;dpt=null&amp;viewId=&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvestorPortal Account Card Pic</label>
    <type>Text</type>
</CustomField>