common/force-app/main/default/objects/Account/fields/Last_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Date__c</fullName>
    <label>Last Action Date</label>
    <type>Date</type>
</CustomField>