common/force-app/main/default/objects/Account/fields/Law_Firm_Bank__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Bank__c</fullName>
    <label>Law Firm Bank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>