common/force-app/main/default/objects/Account/fields/Law_Firm_Branch__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Branch__c</fullName>
    <label>Law Firm Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>