common/force-app/main/default/objects/Account/fields/Location_Preference__c.field-meta.xml
<CustomField>
    <fullName>Location_Preference__c</fullName>
    <label>Location Preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>