common/force-app/main/default/objects/Account/fields/Marketing_Updates_About_Product_OptIn__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Updates_About_Product_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to hold optin data for preference category Marketing Updates about products on the preference centre page</description>
    <label>Marketing_Updates_About_Product_OptIn</label>
    <type>Checkbox</type>
</CustomField>