common/force-app/main/default/objects/Account/fields/Marketing_Wholesale_Definition__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Wholesale_Definition__c</fullName>
    <label>Marketing Wholesale Definition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>