common/force-app/main/default/objects/Account/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <displayFormat>M-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Member ID</label>
    <type>AutoNumber</type>
</CustomField>