common/force-app/main/default/objects/Account/fields/Membership_Exists__c.field-meta.xml
<CustomField>
    <fullName>Membership_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when a membership exists against the person account whether currently active or not.</description>
    <inlineHelpText>This field is checked when a membership exists against the person account whether currently active or not.</inlineHelpText>
    <label>Membership Exists</label>
    <type>Checkbox</type>
</CustomField>