common/force-app/main/default/objects/Account/fields/Michael_QLD_Investor_List__c.field-meta.xml
<CustomField>
    <fullName>Michael_QLD_Investor_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Michael QLD Investor List</label>
    <type>Checkbox</type>
</CustomField>