common/force-app/main/default/objects/Account/fields/Minimum_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Minimum_EBITDA__c</fullName>
    <inlineHelpText>Enter the amount of turnover the company will consider investing in as a minimum number. Add more detail if required to the &quot;Background&quot; field.</inlineHelpText>
    <label>Minimum EBITDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>