common/force-app/main/default/objects/Account/fields/ML_Score__c.field-meta.xml
<CustomField>
    <fullName>ML_Score__c</fullName>
    <label>ML Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>